# msvc.py

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  msvc.py  pyproject.toml
.hookspace/: workspace.json
